fixed alignment of zoom in/out buttons

--- a/Base GUI/Capstone_Allocation.css
+++ b/Base GUI/Capstone_Allocation.css
@@ -126,6 +126,7 @@ nav {
   overflow: hidden;
   border-radius: 22px;
   background:rgba(255,255,255, 0.8);
+  position: relative;
 }
 
 #drawZone2 {
@@ -136,6 +137,7 @@ nav {
   overflow: hidden;
   border-radius: 22px;
   background:rgba(255,255,255, 0.8);
+  position: relative;
 }
 
 /*clears floats after the columns*/
@@ -180,11 +182,11 @@ label:hover {
   font-size: xx-large;
   position: fixed;
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 10px;
+  right: 10px;
   /* top: 675px; */
   /* left: 1370px; */
-  z-index: 2;
+  z-index: 1000;
   color: rgb(77, 77, 77);
   border-radius: 80%;
   border: black;
@@ -195,12 +197,12 @@ label:hover {
   font-size: xx-large;
   position: fixed;
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 10px;
+  right: 10px;
   margin-right: 50px;
   /* top: 675px;
   left: 1425px; */
-  z-index: 2;
+  z-index: 1000;
   color: rgb(77, 77, 77);
   border-radius: 80%;
   border: black;
